--- a/examples/Cargo.toml
+++ b/examples/Cargo.toml
@@ -37,6 +37,9 @@ tracing = { version = "0.1", default-features = false }
 tracing-forest = { version = "0.1", features = ["ansi", "smallvec"], optional = true }
 tracing-subscriber = { version = "0.3", features = ["std", "env-filter"] }
 winterfell = { version = "0.13", path = "../winterfell", default-features = false }
+plotters = "0.3"
+csv = "1.3"
+serde = { version = "1.0", features = ["derive"] }
 
 [dev-dependencies]
 criterion = "0.6"
